--- a/CustomAddons/Splunk_TA_eGInnovation/default/indexes.conf
+++ b/CustomAddons/Splunk_TA_eGInnovation/default/indexes.conf
@@ -1,5 +1,5 @@
 [eg_innovation]
-homePath    = $SPLUNK_DB/eg_innovation/db
-coldPath    = $SPLUNK_DB/eg_innovation/colddb
-thawedPath  = $SPLUNK_DB/eg_innovation/thaweddb
+homePath    = $SPLUNK_DB/db_monitoring/db
+coldPath    = /data2/splunk/db_monitoring/colddb
+thawedPath  = $SPLUNK_DB/db_monitoring/thaweddb
 frozenTimePeriodInSecs = 31536000
