--- a/CustomAddons/entuity_addon_splunk/default/inputs.conf
+++ b/CustomAddons/entuity_addon_splunk/default/inputs.conf
@@ -7,3 +7,4 @@ sourcetype = entuity:hec
 connection_host = ip
 index = network_monitoring
 indexes = network_monitoring
+allowQueryStringAuth = true
