--- a/CustomAddons/entuity_addon_splunk/default/props.conf
+++ b/CustomAddons/entuity_addon_splunk/default/props.conf
@@ -4,3 +4,4 @@ INDEXED_EXTRACTIONS = json
 KV_MODE = none
 category = Custom
 description = Entuity HTTP Event Collector data format - JSON.  
+AUTO_KV_JSON = false
