--- a/CustomAddons/Splunk_TA_Foodpanda_APIGW/default/inputs.conf
+++ b/CustomAddons/Splunk_TA_Foodpanda_APIGW/default/inputs.conf
@@ -1,11 +1,17 @@
-[monitor:///data/ELK/Reports/.../FoodPandaPayloadLogs*.csv]
+# [monitor:///data/ELK/Reports/.../FoodPandaPayloadLogs*.csv]
+# index = foodpanda
+# sourcetype = cimb:foodpanda:api:payloadlogs
+# disabled = false
+# _TCP_ROUTING = ProSplunk
+
+# [monitor:///data/ELK/Reports/.../FoodPandaLogs*.csv]
+# index = foodpanda
+# sourcetype = cimb:foodpanda:api:logs
+# disabled = false
+# _TCP_ROUTING = ProSplunk
+
+[monitor://data/Axway-7.7/apigateway/logs/Payloads/transactionLog.log]
 index = foodpanda
 sourcetype = cimb:foodpanda:api:payloadlogs
-disabled = false
-_TCP_ROUTING = ProSplunk
-
-[monitor:///data/ELK/Reports/.../FoodPandaLogs*.csv]
-index = foodpanda
-sourcetype = cimb:foodpanda:api:logs
 disabled = false
 _TCP_ROUTING = ProSplunk
